[package]
name = "g-k-crates-io-client"
version = "0.16.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/g-k/g-k-crates-io-client"
description = """
A fork of the crates-io package:
Helpers for interacting with crates.io
"""

[lib]
name = "g_k_crates_io_client"
path = "lib.rs"

[dependencies]
curl = "0.4"
failure = "0.1.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "1.0"
